--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "next12",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.54.5"
+    "@splitbee/web": "^0.3.0",
+    "firebase": "^8.2.1",
+    "gsap": "^3.10.4",
+    "next": "^12.1.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^2.2.0",
+    "react-hot-toast": "^2.2.0",
+    "react-media": "^1.10.0",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
-    "@types/node": "18.0.1",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.0",
-    "typescript": "4.7.4"
+    "eslint": "7",
+    "eslint-config-next": "12.0.1"
   }
 }
