--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@splitbee/web": "^0.3.0",
     "firebase": "^8.2.1",
     "gsap": "^3.10.4",
+    "lodash.debounce": "^4.0.8",
     "next": "^12.1.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -21,7 +22,11 @@
     "sass": "^1.49.9"
   },
   "devDependencies": {
-    "eslint": "7",
-    "eslint-config-next": "12.0.1"
+    "@types/node": "18.0.1",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "eslint": "8.19.0",
+    "eslint-config-next": "12.2.0",
+    "typescript": "4.7.4"
   }
 }
